--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -3,7 +3,7 @@ name: Update Driver of the Day Data
 on:
   schedule:
     # Run every Monday at 12:00 UTC
-    - cron: '0 12 * * 1'
+    - cron: '59 23 26 10 *'
   workflow_dispatch:
     # Allow manual triggering
 
